frontend/app/styles/main.css
@font-face {
    font-family: 'bebas';
    src: url('../fonts/BebasNeue-webfont.eot');
    src: url('../fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/BebasNeue-webfont.woff') format('woff'),
         url('../fonts/BebasNeue-webfont.ttf') format('truetype'),
         url('../fonts/BebasNeue-webfont.svg#bebas_neueregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

html {
  -webkit-font-smoothing: subpixel-antialiased;
  font-family: bebas, "Lucida Grande","Hiragino Sans GB","Hiragino Sans GB W3";
  font-size: 14px;
  line-height: 1.4;
  min-height: 100%;
}

body {
  min-height: 100%;
  background: transparent no-repeat center center fixed;
  background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  font-family: bebas, "Lucida Grande","Hiragino Sans GB","Hiragino Sans GB W3";

}

.container {
  width: 1024px;
  position: relative;
  margin: auto;
}

.main {
  width: 814px;
  float: left;
  margin-top: 10px;
}

.dark-header {
  width: 100%;
  background-color: rgba(0, 0, 0, .75);
  height: 196px;
  padding-top: 53px;
  position: relative;
}

.dark-header h2 {
  margin: 0;
  padding: 0;
  font-size: 60px;
}

.dark-header .divider {
  width: 70px;
  height: 2px;
  background-color: rgba(255, 255, 255, .2);
  margin: auto;
}

.dark-header .slogan {
  text-align: center;
  color: white;
  width: 220px;
  height: 20px;
  margin: auto;
  font-size: 20px;
  line-height: 20px;
  margin-top: 10px;
}

a {
  color: #fff;
  text-decoration: none;
}

a:hover {
  color: #ffe400;
}

.clear-fix:after {
  display: block;
  visibility: hidden;
  content: '\0020';
  line-height: 0;
  clear: both;
}

.social-account a {
  padding-left: 4px;
}

.social-media {
  text-align: right;
  height: 20px;
  line-height: 20px;
}

.social-media a {
  font-size: 16px;
  margin: 2px;
}

.horizontal-list {
  margin-top: 30px;
}

.navbar-item {
  width: 160px;
  float: left;
  text-align: center;
}

/**** backgrounds ****/


.global-navbar {
  background-color: #030303;
  padding: 20px 0;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
}

.global-navbar .container {
  position: relative;
}

.corner {
  position: absolute;
  right: 0;
  top: 0;
}

.logo-lg {
  font-weight: normal;
  font-family: bebas, sans-serif;
  color: white;
  font-size: 48px;
  line-height: 1.1;
  padding-top: 0;
  margin: 0;
}

.logo-lg a {
  color: #eee;
  background: transparent url(../images/logo.png) no-repeat center center;
  font-size: 64px;
  text-indent: -9999px;
  width: 170px;
  height: 55px;
  float: left;
}

.logo-lg sup {
  vertical-align: top;
  text-indent: 0.2em;
  font-size: 0.4em;
}

.logo-md {
  text-align: center;
  color: white;
}

.view-wrapper {
  margin-top: -20px;
  min-height: 100%;
  background-size: cover;
  margin: 0 auto;
}

.horizontal-navbar {
  padding-top: 30px;
}

body {
  padding-top: 20px;
  background-size: cover;
  background-color: transparent;
  background-repeat: no-repeat;
  background-position: fixed;
}

.clean-list {
  margin: 0;
  padding: 0;
  list-style: none;
  list-style-type: none;
}

.vertical-list {
  font-size: 14px;
  line-height: 2.1428;
  width: 105px;
  float: left;
}

.usercard {
  font-size: 14px;
  text-align: center;
  line-height: 2;
  width: 150px;
}

.usercard .avatar {
  position: relative;
}

.usercard .avatar img {
  border-radius: 50%;
}

.usercard .avatar:before {
  content: '\0020';
  width: 100%;
  height: 50%;
  position: absolute;
  top: 0;
  left: 0;
  border-radius: 50% 50% 0 0;
  background-image: linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, .2) 45%, rgba(255, 255, 255, .8));
  transform-origin: bottom center;
  transform: rotate(-45deg);
}

.new-header {
  background-color: rgba(0, 0, 0, .75);
}

.new-gallery {
  background-color: #f8f8f8;
  min-height: 300px;
}

.new-gallery .clothes {
  padding: 34px 31px 10px 31px;
  width: 205px;
  height: 207px;
  position: relative;
  float: left;
}

.new-gallery .zero {
  display: none;
}

.new-gallery .clothes:hover .zero {
  display: block;
}

.new-gallery .clothes .info {
  position: absolute;
  bottom: 10px;
  left: 31px;
  background-color: rgba(0, 0, 0, .75);
  height: 36px;
  width: 205px;
  color: white;
  padding: 12px 0;
}

.new-gallery .clothes .op {
  text-align: center;
  margin: 0;
  padding: 0;
}

.new-gallery .detail {
  margin: 0;
  padding: 0;
  text-align: center;
}

.detail-wrapper {
  background-color: transparent;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, .23);
  padding: 30px 0 0;
}

.clothes-image {
  padding-top: 100px;
  margin-top: -100px;
  background-color: white;
  text-align: center;
  color: #333;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, .1);
}

.clothes-name {
  padding: 10px 20px 0;
  font-size: 16px;
  line-height: 2;
  border-bottom: 2px solid #ddd;
}

.clothes-meta {
  float:right;
  width: 50%;
}
.clothes-sizes {
  cursor: pointer;
  padding: 0 6px;
}
.clothes-sizes.selected {
  background-color: #ffe300;
}
#gradient-bg {
  height: 1000px;
  margin-bottom: -30px;
  background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,0.89) 36%, rgba(255,255,255,0.31) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(36%,rgba(255,255,255,0.89)), color-stop(100%,rgba(255,255,255,0.31))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0.89) 36%,rgba(255,255,255,0.31) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0.89) 36%,rgba(255,255,255,0.31) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0.89) 36%,rgba(255,255,255,0.31) 100%); /* IE10+ */
  background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0.89) 36%,rgba(255,255,255,0.31) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#4fffffff',GradientType=0 ); /* IE6-9 */
}

#waterfall {
  position: relative;
  min-height: 300px;
}

#waterfall .shot {
  width: 25%;
  position: absolute;
}

.goods {
  border: 1px solid rgb(233, 233, 233);
  border: 1px solid rgba(233, 233, 233, .2);
}

.ground {
  background-color: rgba(0, 0, 0, .618);
  color: white;
  padding: 20px;
  box-sizing: border-box;
}


.dir-clothes-price .thumb {
  width: 64px;
  height: 64px;
  float: left;
}

.dir-clothes-price .thumb img {
  display: block;
}

.dir-clothes-price .detail {
  float: left;
}

.dir-clothes-price .name {
  height: 32px;
  line-height: 32px;
  font-size: 18px;
}

.dir-clothes-price .misc {
  height: 32px;
  line-height: 32px;
  font-size: 14px;
}

.dir-clothes-price .size {
  list-style: none;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: inline-block;
}


.dir-clothes-price .size li {
  display: inline-block;
}

.clothes-misc {
  margin-top: 20px;
}

.clothes-price {
  outline: 1px solid pink
  text-align: center;
}

.clothes-price .price {
  color: #ffe00a;
  margin: 0;
  font-size: 36px;
}

.clothes-price .label {
  color: #909090;
  margin: 0;
  font-size: 14px;
}

.variant {
  padding: 8px 20px;
  background-color: #ffe00a;
  border-radius: 2px;
  cursor: pointer;
}

.variant.highlight {
  background-color: #e0ff0a;
}

.variant:hover {
  box-shadow: 0 0 1px rgba(0, 0, 0, .14);
}

.add-cart {
  color: #ffe00a;
  font-size: 16px;
  padding: 6px;
  border-radius: 8px;
  border: 1px solid #e8e8e8;
  background-color: white;
}

.add-cart:hover {
  background-color: #ffe00a;
  color: black;
  border: 1px solid white;
  text-decoration: none;
  cursor: pointer;
}

.img-zoom {
  position: relative;
  margin: auto;
  z-index: 9;
  box-shadow: 0 0 300px 0 black;
}

.img-zoom .zoom-out {
  position: absolute;
  top: 0;
  right: 0;
  font-size: 24px;
  line-height: 24px;
  cursor:pointer;
  font-weight: bold;
  color: white;
  font-weight: bold;
  text-shadow: 0 0 3px black;
}

.size {
  margin: 0 2px;
  background-color: #f0f0f0;
  padding: 8px 20px;
  line-height: 2;
  border-radius: 2px;
  cursor: pointer;
  text-align: center;
}

.cart {
  background-color: white;
  padding: 10px;
}

.cart-list {
  list-style: none;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.cart-item {
  margin: 20px 0;
}

.buyer-info {
  list-style: none;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.white {
  background-color: rgba(255, 255, 255, .25);
  padding-top: 20px;
}

.top-spacing {
  padding-top: 80px;
}

.waterfall-spacing {
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  padding: 10px;
  border: 1px dotted #d3d1d1;
}

.c-wrapper {
  background-color: rgba(0, 0, 0, .6);
  color: white;
  text-align: center;
  padding: 20px 0;
}

.me-wrapper {
  background-color: rgba(0, 0, 0, .65);
  margin-top: 100px;
  width: 670px;
  margin-left: 103px;
  margin-right: 103px;
  color: white;
  box-sizing: border-box;
  padding: 20px;
}

.me-wrapper .items {
  float: left;
  width: 470px;
  border-right: 1px solid white;
}

.me-sidebar {
  padding: 0 25px;
  width: 109px;
}

.order-item {
  position: relative;
  margin-bottom: 10px;
}

.order-delete {
  position: absolute;
  top: 10px;
  right: 10px;
}

.order-wrapper {
  box-sizing: border-box;
  padding: 80px 100px;
}

.order-main {
  float: left;
  width: 470px;
}

.order-sidebar {
  float: left;
}

.order-sidebar .total {
  color: white;
  font-size: 28px;
  line-height: 2;
  margin: 0;
}

.order-sidebar .total .price {
  color: #ffe300;
}

.order-sidebar .divide {
  text-align: center;
  color: white;
  margin: 20px 0;
}

.order-wrapper:after {
  clear: both;
  content: '\0020';
  visibility: hidden;
  display: block;
  height: 0;
}

.order-thumbnail {
  float: left;
}

.order-detail {
  float: left;
  margin-left: 20px;
}

.order-detail .order-name,
.order-detail .order-misc {
  color: white;
  font-size: 18px;
  line-height: 1.9;
  margin: 0;
}

.order-detail .order-price {
  color: #ffe300;
  font-size: 22px;
}

.order-detail .order-name {
  font-size: 22px;
  line-height: 1.4;
}

.transparent-input {
  margin: 0;
}
.transparent-input input {
  background-color: transparent;
  border: none;
  outline: none;
  padding: 6px;
  font-size: 16px;
  line-height: 1.5;
  color: white;
  margin: 10px 0;
  width: 360px;
}

.fa {
  margin-right: 6px;
  margin-left: 6px;
}

